--- a/style.css
+++ b/style.css
@@ -65,3 +65,10 @@ section {
     padding: 20px;
     margin: 20px;
 }
+
+footer nav ul {
+    display: flex;
+    justify-content: space-around;
+    height: 15px;
+    list-style: none;
+}
